Bug 456562 - Searching for files in application launchers other than Kickoff fails
Summary: Searching for files in application launchers other than Kickoff fails
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) widget (other bugs)
Version First Reported In: 5.25.2
Platform: Manjaro Linux
: VHI normal
Target Milestone: 1.0
Assignee: Alexander Lohnau
URL:
Keywords: regression
: 457276 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-07-10 19:03 UTC by smow
Modified: 2022-08-16 21:38 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description smow 2022-07-10 19:03:13 UTC
SUMMARY
Since the update to Plasma 5.25.2, searching for files doesn't work in application launchers, except the default Kickoff and directly in Krunner.

STEPS TO REPRODUCE
1. Add or change Kickoff to alternative application launcher (e.g. Simple Menu, Tiled Menu).
2. Search for any file in the search box.

OBSERVED RESULT
List is empty, unless the text matches application name.

EXPECTED RESULT
List should contain the file you're looking for.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.25.2
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.5
Kernel Version: 5.18.10-1-MANJARO (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
To investigate it further I 
- created another user account on my working machine,
- installed Manjaro in virtual machine with Plasma 5.25
and succesfully reproduced it in both cases.
See also https://forum.manjaro.org/t/cant-search-for-files-in-application-launchers-except-in-kickoff/116132/6.
Comment 1 Nate Graham 2022-07-13 19:21:22 UTC
Can reproduce. Probably something changed in the Kicker backend.
Comment 2 Nate Graham 2022-07-29 17:29:19 UTC
*** Bug 457276 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2022-08-13 17:49:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1092
Comment 4 Alexander Lohnau 2022-08-15 05:20:02 UTC
Git commit dd0b54b4fb821b2b3dc66ddeb404e2216c08b598 by Alexander Lohnau.
Committed on 15/08/2022 at 05:17.
Pushed by alex into branch 'master'.

Fix renaming of plugin ID when converting DBus runner metadata files

M  +4    -0    autotests/CMakeLists.txt
A  +21   -0    autotests/plasma-runner-dbusrunnertest.desktop
A  +5    -0    autotests/plasma-runner-testconversionfile.desktop
A  +26   -0    autotests/testmetadataconversion.cpp     [License: LGPL(v2.1+)]
M  +2    -2    src/kpluginmetadata_utils_p.h

https://invent.kde.org/frameworks/krunner/commit/dd0b54b4fb821b2b3dc66ddeb404e2216c08b598
Comment 5 Nicolas Fella 2022-08-15 12:02:58 UTC
Git commit 484514d3a2199aaaa2a20a9ab8236c7966204aa7 by Nicolas Fella.
Committed on 15/08/2022 at 10:31.
Pushed by nicolasfella into branch 'Plasma/5.25'.

[kicker] Fix baloo runner name

At some point the name changed

Now the baloo runner is considered again when searching

M  +1    -1    applets/kicker/package/contents/config/main.xml

https://invent.kde.org/plasma/plasma-desktop/commit/484514d3a2199aaaa2a20a9ab8236c7966204aa7