Fix renaming of plugin ID when converting DBus runner metadata files

BUG: 456562